- If attackAuto is set to 0, Kore will no longer attack all monsters
  while moving to lockMap.
- When in X-Kore mode, do not quit on payment/banned error (fix by anu).
- State changes (like Frozen) are now correctly detected again.
- Fix typo which cause lockMap_randX/Y to not work.
- The 'cart add' command now checks whether you have a cart.
- Fix some memory leaks.
- Guild Member Log In/Out and Guild Notice are no longer duplicated
  in XKore mode.

New config options:
- teleportAuto_useSP - use SP (cast skill) when using teleport without item

==================
### 1.3.5 (beta)
==================

- Fixed a rare bug which caused OpenKore to quit with a "version too old"
  error.


==================
### 1.3.4 (beta)
==================

Hopefully the last beta.

*** NOTE ***
- portalsLOS.txt has changed. Please use the portalsLOS.txt from the
  latest tablepack, or delete your copy and let Kore recompile it.


New features:
- Added (n)curses text UI console interface for Unix. You can start it with
  the parameter: --interface=Console::Curses
- Added command 'arrowcraft' - making arrows

Bug fixes:
- Fixed shopAuto_open timing problems with sitAuto (also changed ai_shop
  timeout).
- Option to teleport when stuck.
- Fix crash when you trying to (un)equip a nonexistant item.
- Fixed command "timeout" not displaying the current timeout.
- Fixed AI not suspending, when playing manually in XKore mode.
- Fixed XKore sending commands before map was loaded completely
  (fixes empty inventory or skilllist with eAthena servers).
- Made motion not stop 3 steps from goal when crossing maps.
- Fixed bot not reacting to damage during mapRoute calculation.
- The Linux interface's input mode will be correct restored after a resume.
- ai_dealAuto added to timeouts.txt.
- Typing "aiv" during an auto-deal will no longer crash.
- The 'timeout' and 'auth' commands now respect the --control parameter.
- When out of arrows, only ask the user to press ENTER if dcOnEmptyArrow